--- a/package.json
+++ b/package.json
@@ -82,7 +82,10 @@
     "@patternfly/react-core": "^4.6.1",
     "@patternfly/react-icons": "^4.1.1",
     "@patternfly/react-styles": "^4.1.1",
+    "@patternfly/react-table": "^2.28.47",
+    "axios": "^0.19.2",
     "express": "^4.13.4",
+    "json-server": "^0.16.1",
     "react-router-dom": "^5.0.1",
     "react-router-last-location": "^2.0.1"
   }
